views with updated links

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
  .container
-  .h1.h1-responsive.desc Hello. Welcome to Faverr.
+  .h1.h1-responsive.desc Hello. Use these links to
   p
-   a.action(href='/login') Login
+   a.action(href='/add') Add Job
    |  or 
-   a.action(href='/register') Sign Up
+   a.action(href='/search') Search Job
    |  to know more.
 
 
