--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
-    title Faverr | #{title}
+    title Massdrop Challenge | #{title}
     link(rel='shortcut icon', href='favicon_1.ico')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css')
     link(href='/css/bootstrap.min.css', rel='stylesheet')
