--- a/views/input.pug
+++ b/views/input.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .reg-container.container
-    h1.h1-responsive.text-xs-center Add URL
+    h1.h1-responsive.text-xs-center Add Job
     form#registerForm.reg-form.py-1(method='POST' action='/add')
       .form-inline
         .md-form.form-group
