--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -8,7 +8,7 @@ nav.navbar.navbar-dark.py-1
         li.nav-item
           a.nav-link(href='/') Home
         li.nav-item
-          a.nav-link(href='https://github.com/Rishabhravindra/', target='_blank') GitHub
+          a.nav-link(href='https://github.com/Rishabhravindra/jobdrop', target='_blank') GitHub
         li.nav-item
           a.nav-link(href='/add') Add Job
         li.nav-item
