--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -3,7 +3,7 @@ nav.navbar.navbar-dark.py-1
     i.fa.fa-bars
   .container
     #collapseEx2.collapse.navbar-toggleable-xs
-      a.navbar-brand(href='/') Massdrop Challenge 
+      a.navbar-brand(href='/') Jobdrop - Massdrop Challenge 
       ul.nav.navbar-nav.float-sm-right
         li.nav-item
           a.nav-link(href='/') Home
