--- a/views/input.pug
+++ b/views/input.pug
@@ -6,7 +6,7 @@ block content
     form#registerForm.reg-form.py-1(method='POST' action='/add')
       .form-inline
         .md-form.form-group
-          input#name.form-control(type='text', name='link' , value='http://www.rishravi.me')
+          input#name.form-control(type='text', name='link' , value='http://www.rishravi.me/sample/sample')
           |  
           label(for='link') Enter URL
         button.btn.btn-primary.btn-submit.pt-1.waves-effect.waves-light(type='submit') Submit
