remove default input value

--- a/views/input.pug
+++ b/views/input.pug
@@ -6,9 +6,9 @@ block content
     form#registerForm.reg-form.py-1(method='POST' action='/add')
       .form-inline
         .md-form.form-group
-          input#name.form-control(type='text', name='link' , value='http://www.rishravi.me/sample/sample')
+          input#name.form-control(type='text', name='link')
           |  
-          label(for='link') Enter URL
+          label(for='link') Enter URL (http://..)
         button.btn.btn-primary.btn-submit.pt-1.waves-effect.waves-light(type='submit') Submit
 
         
